fixed header white-spacing issue

--- a/styles-case-study.css
+++ b/styles-case-study.css
@@ -66,6 +66,8 @@ a:-webkit-any-link {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #0B0A0B;
+
   }
   
   .nav-bar-header .logo {
